[package]
name = "kepler"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.59"
async-recursion = "0.3"
async-stream = "0.3"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
aws-sdk-s3 = "0.19"
aws-types = "0.49"
aws-smithy-http = "0.49"
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
cached = "0.40"
derive_builder = "0.11"
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
hex = "0.4"
hyper = "0.14" # Prometheus server
iri-string = "0.5"
lazy_static = "1.4.0"
libipld = { version = "0.14", default-features = false, features = ["dag-cbor", "dag-json", "derive", "serde-codec"]}
libp2p = { default-features = false, features = ["tcp", "mplex", "noise", "ping", "yamux", "dns", "tokio"], version = "0.51.0", git = "https://github.com/kckeiks/rust-libp2p/", branch = "use-quick-protobuf" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio", "reqwest_collector_client"] }
pin-project = "1"
prometheus = { version = "0.13.0", features = ["process"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["hex"] }
sled = "0.34"
thiserror = "1"
tempfile = "3"
time = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
urlencoding = "2.1"
void = "1"
uuid = "1"
percent-encoding = "2.1"

[dependencies.kepler-lib]
path = "lib/"

[workspace]

members = [
    "lib",
    "sdk-wasm",
    "sdk",
    "kepler-core"
]

exclude = [
    "test/load/signer",
]
