[package]
name = "kepler"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.59"
aws-config = "0.49"
aws-sdk-dynamodb = "0.19"
aws-sdk-s3 = "0.19"
aws-types = "0.49"
aws-smithy-http = "0.49"
base64 = "0.13"
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
hyper = "0.14" # Prometheus server
lazy_static = "1.4.0"
libp2p = { default-features = false, version = "0.51.3" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio", "reqwest_collector_client"] }
pin-project = "1"
prometheus = { version = "0.13.0", features = ["process"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["hex"] }
thiserror = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

[dependencies.kepler-core]
path = "kepler-core/"
features = ["sqlite", "postgres", "mysql", "tokio"]

[dependencies.kepler-lib]
path = "lib/"

[workspace]

members = [
    "lib",
    "sdk-wasm",
    "sdk",
    "kepler-core"
]

exclude = [
    "test/load/signer",
]
