[package]
name = "exchange-protocol"
edition = "2021"
rust-version = "1.65.0"
description = "Streaming Request/Response Protocols"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
instant = "0.1.11"
libp2p = { default-features = false, version = "0.50.0" }
log = "0.4.11"
rand = "0.8"
smallvec = "1.6.1"
unsigned-varint = { version = "0.7", features = ["std", "futures"] }

[dev-dependencies]
async-std = "1.6.2"
env_logger = "0.9.0"
rand = "0.8"

# Passing arguments to the docsrs builder in order to properly document cfg's. 
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
