[package]
name = "kepler-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
sea-orm = { version = "^0", default-features = false, features = ["macros", "with-time", "with-json"] }
sea-orm-migration = { version = "0.11", default-features = false }
futures = { default-features = false, version = "0.3", features = ["alloc", "std"] }
pin-project = "1"
time = "0.3"
kepler-lib = { version = "0.1", path = "../lib" }
thiserror = "1"
ssi = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_ipld_dagcbor = "0.3"
blake3 = "1.3"

[dev-dependencies]
sea-orm = { version = "^0", features = ["runtime-async-std-rustls", "sqlx-sqlite"] }
async-std = { version = "1", features = ["attributes"] }
