[package]
name = "kepler-sdk-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = "0.3"
kepler-sdk = { path = "../sdk", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1" }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
