[package]
name = "kepler-sdk-wasm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = "0.3"
console_error_panic_hook = "0.1"
kepler-sdk = { path = "../sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1" }
serde_json = "1.0"
time = { version = "0.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = {version = "0.2", features = ["js"]}
rand = { version = "0.7", features = ["wasm-bindgen"] }
