[package]
name = "kepler-sdk"
version = "0.1.0"
edition = "2021"

[features]
"wasm" = ["kepler-lib/wasm"]

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["wasmbind"] }
hex = "0.4"
http = "0.2"
iri-string = "0.4"
kepler-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1" }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1", features = ["macros"]}
