[package]
name = "kepler-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
time = { version = "0.3", features = ["wasm-bindgen"] }
hex = "0.4"
http = "0.2"
iri-string = "0.6"
kepler-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1" }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1", features = ["macros"]}
