[package]
name = "kepler-sdk"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.13"
time = "0.3"
hex = "0.4"
http = "0.2"
iri-string = "0.6"
kepler-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1" }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1.36"
serde_ipld_dagcbor = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"]}
