[package]
name = "signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
chrono = "0.4.19"
ethers = "0.6.2"
iri-string = "0.4"
kepler-lib = { path = "../../../lib" }
kepler-sdk = { path = "../../../sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
